<resources>
    <string name="app_name">CocinaFacil</string>
    <string name="textView_usuario">Usuario/correo</string>
    <string name="textView_contrasena">Contraseña</string>
    <string name="button_autenticar">Autenticar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desayunos">Desayunos</string>
    <string name="comidas">Comidas</string>
    <string name="cenas">Cenas</string>
    <string name="bebidas">Bebidas</string>
</resources>
